--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    notes website
+    <div id="back"><a href="/">go back</a></div>
+    <div class="markdown-body" id="container"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
